--- a/index.html
+++ b/index.html
@@ -2,37 +2,42 @@
 <html lang="ja">
 <head>
     <meta charset="UTF-8">
-    <title>Goalink Editor - Standing Slim</title>
+    <title>Goalink Editor - Standing Ultra Slim</title>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/html2canvas/1.4.1/html2canvas.min.js"></script>
     <style>
-        body { background: #111; color: white; font-family: 'Helvetica Neue', Arial, sans-serif; display: flex; flex-direction: column; align-items: center; padding: 10px; }
-        .controls { background: #222; padding: 15px; border-radius: 10px; margin-bottom: 10px; width: 480px; display: flex; flex-direction: column; gap: 8px; box-sizing: border-box; }
-        textarea { width: 100%; height: 80px; background: #333; color: #ccc; border: 1px solid #444; border-radius: 4px; padding: 8px; font-size: 11px; }
-        button { background: #007AFF; color: white; border: none; padding: 12px; border-radius: 8px; font-weight: bold; cursor: pointer; }
+        body { background: #111; color: white; font-family: sans-serif; display: flex; flex-direction: column; align-items: center; padding: 10px; }
+        .controls { background: #222; padding: 10px; border-radius: 10px; margin-bottom: 10px; width: 480px; display: flex; flex-direction: column; gap: 5px; }
+        textarea { width: 100%; height: 60px; background: #333; color: #ccc; font-size: 11px; }
+        button { background: #007AFF; color: white; border: none; padding: 10px; border-radius: 8px; font-weight: bold; cursor: pointer; }
         
-        /* インスタ投稿用 4:5サイズ */
+        /* 4:5サイズ固定 */
         #capture-area { 
-            width: 432px; height: 540px; background: #000; overflow: hidden; position: relative;
+            width: 432px; height: 540px; background: #000; overflow: hidden; 
             display: flex; flex-direction: column; padding: 5px; box-sizing: border-box;
         }
 
-        table { width: 100%; border-collapse: collapse; table-layout: fixed; margin-top: 5px; }
+        table { width: 100%; border-collapse: collapse; table-layout: fixed; }
         
-        /* 文字の太さを900（極太）で統一 */
-        th, td { font-weight: 900 !important; text-align: center; white-space: nowrap; }
-        th { font-size: 10px; color: #777; padding: 8px 0; border-bottom: 2px solid #333; }
-        td { font-size: 12.5px; padding: 5.5px 0; border-bottom: 1px solid #222; color: #fff; }
+        /* 極限まで高さを圧縮 */
+        th, td { font-weight: 900 !important; text-align: center; white-space: nowrap; line-height: 1; }
+        th { font-size: 9px; color: #777; padding: 5px 0; border-bottom: 1px solid #444; }
+        td { font-size: 11px; padding: 3.2px 0; border-bottom: 1px solid #222; color: #fff; }
 
-        /* 列幅指定（20位まで入れるための微調整） */
-        .col-r { width: 26px; } 
-        .col-t { width: 135px; text-align: left; padding-left: 8px; } 
-        .col-m { width: 24px; color: #aaa; } 
-        .col-pts { width: 30px; color: #fff; } 
-        .col-s { width: 22px; color: #888; font-size: 10px; }
-        .col-g { width: 24px; color: #888; font-size: 10px; }
-        .col-gd { width: 32px; }
+        .league-divider { 
+            background: #222; color: #fff; font-size: 9px; font-weight: 900; 
+            text-align: center; padding: 3px 0; border-bottom: 1px solid #444;
+        }
 
-        .team-name { overflow: hidden; text-overflow: ellipsis; display: block; width: 100%; }
+        /* 列幅調整 */
+        .col-r { width: 22px; } 
+        .col-t { width: 130px; text-align: left; padding-left: 5px; } 
+        .col-m { width: 22px; color: #aaa; } 
+        .col-pts { width: 28px; } 
+        .col-s { width: 20px; color: #888; font-size: 9px; }
+        .col-g { width: 22px; color: #888; font-size: 9px; }
+        .col-gd { width: 28px; }
+
+        .team-name { overflow: hidden; text-overflow: ellipsis; display: block; }
         #res img { margin-top: 20px; width: 432px; border: 1px solid #444; }
     </style>
 </head>
@@ -40,8 +45,11 @@
 
     <div class="controls">
         <textarea id="it" placeholder="順位表をコピペ"></textarea>
-        <button onclick="parseStanding()">1. 順位表を解析（試・点入替）</button>
-        <button onclick="takePhoto()" style="background:#34c759;">2. 画像出力</button>
+        <div style="display:flex; gap:5px;">
+            <button onclick="parseStanding(false)" style="flex:1;">通常(20位連番)</button>
+            <button onclick="parseStanding(true)" style="flex:1; background:#E02424;">2ブロック形式</button>
+        </div>
+        <button onclick="takePhoto()" style="background:#34c759;">画像出力</button>
     </div>
 
     <div id="capture-area">
@@ -50,14 +58,10 @@
                 <tr>
                     <th class="col-r">順</th>
                     <th class="col-t">TEAM</th>
-                    <th class="col-m">試合</th>
-                    <th class="col-pts">勝点</th>
-                    <th class="col-s">勝</th>
-                    <th class="col-s">分</th>
-                    <th class="col-s">負</th>
-                    <th class="col-g">得</th>
-                    <th class="col-g">失</th>
-                    <th class="col-gd">差</th>
+                    <th class="col-m">試</th>
+                    <th class="col-pts">点</th>
+                    <th class="col-s">勝</th><th class="col-s">分</th><th class="col-s">負</th>
+                    <th class="col-g">得</th><th class="col-g">失</th><th class="col-gd">差</th>
                 </tr>
             </thead>
             <tbody id="standing-body"></tbody>
@@ -71,60 +75,52 @@
         function getConvertedName(name) {
             if(!name) return "";
             let n = name.trim();
-            // 重複カット（横浜FM横浜FM → 横浜FM）
             const half = Math.floor(n.length / 2);
-            if (n.length >= 4 && n.substring(0, half) === n.substring(half)) {
-                n = n.substring(0, half);
-            }
+            if (n.length >= 4 && n.substring(0, half) === n.substring(half)) n = n.substring(0, half);
             for (let key in teamDict) { if (n.includes(key)) return teamDict[key]; }
             return n;
         }
 
-        function parseStanding() {
+        function parseStanding(isTwoBlock) {
             const raw = document.getElementById('it').value;
             const allTokens = raw.split(/\s+/).filter(t => t !== "");
             let data = [];
-
             for (let i = 0; i < allTokens.length; i++) {
-                // 「数字」→「チーム名」のパターンを検知
                 if (allTokens[i].match(/^\d{1,2}$/) && allTokens[i+1] && !allTokens[i+1].match(/^\d+$/)) {
                     let stats = [];
                     for(let j=i+2; j<i+15; j++) {
                         if(allTokens[j] && allTokens[j].match(/^[+-]?\d+$/)) stats.push(allTokens[j]);
                         if(stats.length >= 8) break;
                     }
-
                     if(stats.length >= 8) {
                         data.push({
-                            rank: allTokens[i],
-                            team: getConvertedName(allTokens[i+1]),
-                            m: stats[1],   // 入れ替え
-                            pts: stats[0], // 入れ替え
+                            rank: allTokens[i], team: getConvertedName(allTokens[i+1]),
+                            m: stats[1], pts: stats[0], // 入替
                             w: stats[2], d: stats[3], l: stats[4], gf: stats[5], ga: stats[6], gd: stats[7]
                         });
                         i += 9;
                     }
                 }
             }
-            renderStanding(data);
+            renderStanding(data, isTwoBlock);
         }
 
-        function renderStanding(data) {
+        function renderStanding(data, isTwoBlock) {
             const body = document.getElementById('standing-body');
-            body.innerHTML = data.slice(0, 20).map(d => `
-                <tr>
-                    <td class="col-r">${d.rank}</td>
+            let html = "";
+            data.slice(0, 20).forEach((d, index) => {
+                if (isTwoBlock) {
+                    if (index === 0) html += `<tr><td colspan="10" class="league-divider" contenteditable="true">A LEAGUE</td></tr>`;
+                    if (index === 10) html += `<tr><td colspan="10" class="league-divider" contenteditable="true">B LEAGUE</td></tr>`;
+                }
+                html += `<tr>
+                    <td>${isTwoBlock ? (index % 10 + 1) : d.rank}</td>
                     <td class="col-t"><span class="team-name" contenteditable="true">${d.team}</span></td>
-                    <td class="col-m" contenteditable="true">${d.m}</td>
-                    <td class="col-pts" contenteditable="true">${d.pts}</td>
-                    <td class="col-s" contenteditable="true">${d.w}</td>
-                    <td class="col-s" contenteditable="true">${d.d}</td>
-                    <td class="col-s" contenteditable="true">${d.l}</td>
-                    <td class="col-g" contenteditable="true">${d.gf}</td>
-                    <td class="col-g" contenteditable="true">${d.ga}</td>
-                    <td class="col-gd" contenteditable="true">${parseInt(d.gd) > 0 ? '+' + d.gd : d.gd}</td>
-                </tr>
-            `).join('');
+                    <td>${d.m}</td><td>${d.pts}</td><td>${d.w}</td><td>${d.d}</td><td>${d.l}</td>
+                    <td>${d.gf}</td><td>${d.ga}</td><td>${parseInt(d.gd)>0?'+'+d.gd:d.gd}</td>
+                </tr>`;
+            });
+            body.innerHTML = html;
         }
 
         function takePhoto() {
